Complementei alguns notebooks

--- a/Notebooks/Aula3_Pandas.ipynb
+++ b/Notebooks/Aula3_Pandas.ipynb
@@ -7,12 +7,20 @@
     "id": "4KZ0SWlwZotW"
    },
    "source": [
-    "# **Python para análise de dados(Pandas)** - *Fernanda Santos*"
+    "# **Python para análise de dados (Pandas)** - *Fernanda Santos*\n",
+    "Complementado por vichShir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Carregar dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -34,12 +42,13 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/content/drive/My Drive/Datasets/Gapminder.csv\",error_bad_lines=False, sep=\";\")"
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/vichShir/dio-cognizant-analise-dados-2021/master/Dados/Gapminder.csv\",\n",
+    "                 error_bad_lines=False, sep=\";\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -138,10 +147,8 @@
        "4  Afghanistan      Asia  1972   36.088  13079460  739.981106"
       ]
      },
-     "execution_count": 6,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 15,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -151,8 +158,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tratar dados"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -160,12 +174,21 @@
    },
    "outputs": [],
    "source": [
-    "df = df.rename(columns={\"country\":\"Pais\", \"continent\": \"continente\", \"year\":\"Ano\", \"lifeExp\":\"Expectativa de vida\", \"pop\":\"Pop Total\", \"gdpPercap\": \"PIB\"})"
+    "# Renomeando as colunas\n",
+    "column_names = {\n",
+    "    \"country\": \"Pais\", \n",
+    "    \"continent\": \"continente\", \n",
+    "    \"year\": \"Ano\", \n",
+    "    \"lifeExp\": \"Expectativa de vida\", \n",
+    "    \"pop\": \"Pop Total\", \n",
+    "    \"gdpPercap\": \"PIB\"\n",
+    "}\n",
+    "df.rename(columns=column_names, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -314,10 +337,8 @@
        "9  Afghanistan       Asia  1997               41.763   22227415  635.341351"
       ]
      },
-     "execution_count": 11,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 18,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -326,8 +347,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Análise exploratória dos dados"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -344,10 +372,8 @@
        "(3312, 6)"
       ]
      },
-     "execution_count": 13,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 19,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -358,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -375,10 +401,8 @@
        "Index(['Pais', 'continente', 'Ano', 'Expectativa de vida', 'Pop Total', 'PIB'], dtype='object')"
       ]
      },
-     "execution_count": 14,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 20,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -388,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -411,10 +435,8 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 21,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -424,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -623,10 +645,8 @@
        "3311  Zimbabwe     Africa  2007               43.487   12311143   469.709298"
       ]
      },
-     "execution_count": 17,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 22,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -636,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -747,15 +767,20 @@
        "max    2007.000000            82.670000  1.318683e+09  113523.132900"
       ]
      },
-     "execution_count": 18,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 23,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Continente Asia"
    ]
   },
   {
@@ -791,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -833,78 +858,76 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>975</th>\n",
-       "      <td>Fiji</td>\n",
-       "      <td>Oceania</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>1952</td>\n",
+       "      <td>28.801</td>\n",
+       "      <td>8425333</td>\n",
+       "      <td>779.445314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>1957</td>\n",
+       "      <td>30.332</td>\n",
+       "      <td>9240934</td>\n",
+       "      <td>820.853030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Asia</td>\n",
        "      <td>1962</td>\n",
-       "      <td>56.494</td>\n",
-       "      <td>421869</td>\n",
-       "      <td>2039.393277</td>\n",
+       "      <td>31.997</td>\n",
+       "      <td>10267083</td>\n",
+       "      <td>853.100710</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>976</th>\n",
-       "      <td>Fiji</td>\n",
-       "      <td>Oceania</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Asia</td>\n",
        "      <td>1967</td>\n",
-       "      <td>58.607</td>\n",
-       "      <td>485000</td>\n",
-       "      <td>2170.073285</td>\n",
+       "      <td>34.020</td>\n",
+       "      <td>11537966</td>\n",
+       "      <td>836.197138</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>977</th>\n",
-       "      <td>Fiji</td>\n",
-       "      <td>Oceania</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Asia</td>\n",
        "      <td>1972</td>\n",
-       "      <td>60.642</td>\n",
-       "      <td>544000</td>\n",
-       "      <td>2797.759484</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>978</th>\n",
-       "      <td>Fiji</td>\n",
-       "      <td>Oceania</td>\n",
-       "      <td>1977</td>\n",
-       "      <td>62.669</td>\n",
-       "      <td>599339</td>\n",
-       "      <td>3182.569600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>979</th>\n",
-       "      <td>Fiji</td>\n",
-       "      <td>Oceania</td>\n",
-       "      <td>1982</td>\n",
-       "      <td>64.683</td>\n",
-       "      <td>658906</td>\n",
-       "      <td>3209.257468</td>\n",
+       "      <td>36.088</td>\n",
+       "      <td>13079460</td>\n",
+       "      <td>739.981106</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Pais continente   Ano  Expectativa de vida  Pop Total          PIB\n",
-       "975  Fiji    Oceania  1962               56.494     421869  2039.393277\n",
-       "976  Fiji    Oceania  1967               58.607     485000  2170.073285\n",
-       "977  Fiji    Oceania  1972               60.642     544000  2797.759484\n",
-       "978  Fiji    Oceania  1977               62.669     599339  3182.569600\n",
-       "979  Fiji    Oceania  1982               64.683     658906  3209.257468"
+       "          Pais continente   Ano  Expectativa de vida  Pop Total         PIB\n",
+       "0  Afghanistan       Asia  1952               28.801    8425333  779.445314\n",
+       "1  Afghanistan       Asia  1957               30.332    9240934  820.853030\n",
+       "2  Afghanistan       Asia  1962               31.997   10267083  853.100710\n",
+       "3  Afghanistan       Asia  1967               34.020   11537966  836.197138\n",
+       "4  Afghanistan       Asia  1972               36.088   13079460  739.981106"
       ]
      },
-     "execution_count": 20,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 25,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Oceania = df.loc[df[\"continente\"] == \"Oceania\"]\n",
-    "Oceania.head()"
+    "asia = df.loc[df[\"continente\"] == \"Asia\"]\n",
+    "asia.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -918,23 +941,45 @@
     {
      "data": {
       "text/plain": [
-       "array(['Oceania'], dtype=object)"
+       "array(['Asia'], dtype=object)"
       ]
      },
-     "execution_count": 21,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 26,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Oceania[\"continente\"].unique()"
+    "asia[\"continente\"].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PIB Asia: $10070.91\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"PIB Asia: ${:.2f}\".format(asia['PIB'].mean()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Agrupamentos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -958,10 +1003,8 @@
        "Name: Pais, dtype: int64"
       ]
      },
-     "execution_count": 22,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 28,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -971,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1047,10 +1090,8 @@
        "Name: Expectativa de vida, dtype: float64"
       ]
      },
-     "execution_count": 23,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 30,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1060,7 +1101,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pais\n",
+       "Kuwait                  65332.910472\n",
+       "Qatar                   60997.795481\n",
+       "Brunei                  54716.019545\n",
+       "Luxembourg              34439.387820\n",
+       "United Arab Emirates    33541.697014\n",
+       "New Caledonia           29859.301112\n",
+       "Switzerland             26733.025627\n",
+       "Norway                  25848.089348\n",
+       "United States           25494.615240\n",
+       "Germany                 24047.168802\n",
+       "Macao, China            22862.097579\n",
+       "Canada                  21782.593493\n",
+       "Netherlands             21295.802522\n",
+       "Denmark                 21159.164825\n",
+       "French Polynesia        20807.513248\n",
+       "Saudi Arabia            20261.743635\n",
+       "Iceland                 20030.522171\n",
+       "Bahamas                 19702.277569\n",
+       "Austria                 19585.143617\n",
+       "Sweden                  19574.051549\n",
+       "Name: PIB, dtype: float64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"Pais\")[\"PIB\"].mean().sort_values(ascending=False)[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3312 observações de PIB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Contagem de observações\n",
+    "print(\"{} observações de PIB\".format(df[\"PIB\"].count()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1072,25 +1172,21 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "11317.115804696637"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PIB: $11317.12\n"
+     ]
     }
    ],
    "source": [
-    "df[\"PIB\"].mean()"
+    "# Média do PIB\n",
+    "print(\"PIB: ${:.2f}\".format(df[\"PIB\"].mean()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1102,32 +1198,17 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "37482287.5451553"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Soma PIB: $37482287.55\n"
+     ]
     }
    ],
    "source": [
-    "df[\"PIB\"].sum()"
+    "# Soma do PIB\n",
+    "print(\"Soma PIB: ${:.2f}\".format(df[\"PIB\"].sum()))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "UMMCdfDsfmao"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
